# profsol

./: .env.example  .env.production.example  .gitignore  README.md  pyproject.toml
atelier/: admin.py  apps.py  context_processors.py  forms.py  models.py  tests.py  urls.py  views.py
atelier/management/commands/: sync_youtube_videos.py
atelier/migrations/: 0001_initial.py
atelier/services/: emails.py  payments.py  qrcode.py  youtube.py
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
deploy/: DEPLOY.md
deploy/nginx/: profsol.moven.cloud.conf
deploy/scripts/: deploy.sh
deploy/systemd/: profsol.service
static/css/: site.css
templates/: base.html
templates/atelier/: checkout_result.html  dashboard.html  home.html  recipe_detail.html  recipe_list.html  video_list.html
templates/registration/: login.html  signup.html
